# scwr-svelte

./: Cargo.toml  README.md  package.json
dnas/scwr/workdir/: dna.yaml
dnas/scwr/zomes/coordinator/runner/: Cargo.toml
dnas/scwr/zomes/coordinator/runner/src/: all_executed_instances.rs  executed_instance.rs  lib.rs
dnas/scwr/zomes/integrity/runner/: Cargo.toml
dnas/scwr/zomes/integrity/runner/src/: executed_instance.rs  lib.rs
tests/src/scwr/runner/: all-executed-instances.test.ts  common.ts  executed-instance.test.ts
ui/: package.json
ui/src/: App.svelte  main.ts
ui/src/scwr/runner/: AllExecutedInstances.svelte  CreateExecutedInstance.svelte  ExecutedInstanceDetail.svelte  types.ts
workdir/: happ.yaml  web-happ.yaml
