[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.3-rc.0"
hdk = "=0.3.3-rc.0"
serde = "1.0"

[workspace.dependencies.runner]
path = "dnas/scwr/zomes/coordinator/runner"

[workspace.dependencies.runner_integrity]
path = "dnas/scwr/zomes/integrity/runner"
